syntax = "proto3";

option go_package = "github.com/utmstack/UTMStack/log-auth-proxy/agent";

package agent;

import "common.proto";

service CollectorService {
    rpc ListCollector (ListRequest) returns (ListCollectorResponse) {}
}

enum CollectorModule{
    AS_400 = 0;
}

message Collector {
    int32 id = 1;
    Status status = 2;
    string collector_key = 3;
    string ip = 4;
    string hostname = 5;
    string version = 6;
    CollectorModule module = 7;
    repeated CollectorConfigGroup groups = 8;
    string last_seen = 9;
}

message CollectorConfigGroup {
    int32 id = 1;
    string group_name = 3;
    string group_description = 4;
    repeated CollectorGroupConfigurations configurations = 5;
    int32 collector_id = 6;
}

message CollectorGroupConfigurations {
    int32 group_id = 2;
    string conf_key = 3;
    string conf_value = 4;
    string conf_name = 5;
    string conf_description = 6;
    string conf_data_type = 7;
    bool conf_required = 8;
  }

message ListCollectorResponse {
    repeated Collector rows = 1;
    int32 total = 2;
}